fixed the z-index of the map

--- a/table-of-contents-style-homepage/subcategory.css
+++ b/table-of-contents-style-homepage/subcategory.css
@@ -95,7 +95,7 @@ option {
   background-color: #f9f9f9;
   min-width: 2rem;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 2;
 }
 
 .dropdown-content span {
@@ -187,6 +187,7 @@ option {
   height: 90vh;
   width: 100%;
   min-width: 90vh;
+  z-index: 1;
 }
 
 /* this style is for the placeholder map image, and it can be removed when the OpenStreetMap has been installed. */
